  at end-of-line, jumping to next end etc. 

- new boolean `py-force-py-shell-name-p'
  When `t', execution with Python specified in `py-shell-name' is en  forced, shebang will have no effect. Default is nil.

-  customizable `py-separator-char', a string, see report lp:975539
  Precedes guessing when not empty, is returned by
  function `py-separator-char


New in version 6.0.5
--------------------

- Menu reworked and extended

- extended commands combine executing statement/block... with dedidi  cated/switch... etc. This may remove some need of customization.  

- local environments support started
  If calls to common `py-shell' should use local executable
  instead of default system Python set
  `py-use-local-default' alongside with
  `py-shell-local-path'

- `py-toggle-shells' alias of more powerful `py-switch-shells'
  Toggles between the interpreter customized in `py-shell-toggle-1' resp. `py-shell-toggle-2'. Was hard-coded CPython and Jython in earlier versions, now starts with Python2 and Python3 by default.

- `py-shell-name' accepts PATH/TO/EXECUTABLE
  in addition to name of an installed default Python-Shell.
  Permits installing commands like
  (defun python-XYZ-shell (&optional argprompt)
    "Start an Python-XYZ interpreter ... "
    (interactive)
    (let ((py-shell-name "PATH/TO/PYTHON-XYZ"))
      (py-shell argprompt)))

-  new commands `indent-tabs-mode', `toggle-indent-tabs-mode', 
  `indent-tabs-mode-on', `indent-tabs-mode-off'

  feature after a request at Stack Exchange asked Jul
  13 '11 at 13:23 saying
  `tab-width' now follows `py-indent-offset'

- new command `py-execute-region-default' forces the
  systems default Python interpreter to execute, ignores
  shebang

  related functions redesigned, `async' argument dropped
  `py-execute-region' now reads:

  (defun py-execute-region (start end &optional shell dedicated)
    "Send the region to a Python interpreter.
